--- a/Exploring and Visualizing Dataset.ipynb
+++ b/Exploring and Visualizing Dataset.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "9be9edb3-5220-4bc8-9d73-c381d8873d2e",
    "metadata": {},
    "outputs": [],
@@ -109,9 +109,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1a30f5f8-a038-4dd9-9d73-90f4c8d85d69",
+   "metadata": {},
+   "source": [
+    "**Exploring/Analysing Speices**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "eb1c9efb-f389-43ea-ab52-2c0f579215f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Setosa\n",
+      "   sepal_length  sepal_width  petal_length  petal_width species\n",
+      "0           5.1          3.5           1.4          0.2  setosa\n",
+      "1           4.9          3.0           1.4          0.2  setosa\n",
+      "2           4.7          3.2           1.3          0.2  setosa\n",
+      "3           4.6          3.1           1.5          0.2  setosa\n",
+      "4           5.0          3.6           1.4          0.2  setosa\n",
+      "versicolor\n",
+      "    sepal_length  sepal_width  petal_length  petal_width     species\n",
+      "50           7.0          3.2           4.7          1.4  versicolor\n",
+      "51           6.4          3.2           4.5          1.5  versicolor\n",
+      "52           6.9          3.1           4.9          1.5  versicolor\n",
+      "53           5.5          2.3           4.0          1.3  versicolor\n",
+      "54           6.5          2.8           4.6          1.5  versicolor\n",
+      "virginica\n",
+      "     sepal_length  sepal_width  petal_length  petal_width    species\n",
+      "100           6.3          3.3           6.0          2.5  virginica\n",
+      "101           5.8          2.7           5.1          1.9  virginica\n",
+      "102           7.1          3.0           5.9          2.1  virginica\n",
+      "103           6.3          2.9           5.6          1.8  virginica\n",
+      "104           6.5          3.0           5.8          2.2  virginica\n"
+     ]
+    }
+   ],
+   "source": [
+    "setosa = iris[iris['species'] == 'setosa']\n",
+    "versicolor = iris[iris['species'] == 'versicolor']\n",
+    "virginica = iris[iris['species'] == 'virginica']\n",
+    "\n",
+    "print(\"Setosa\")\n",
+    "print(setosa.head())\n",
+    "\n",
+    "print(\"versicolor\")\n",
+    "print(versicolor.head())\n",
+    "\n",
+    "print(\"virginica\")\n",
+    "print(virginica.head())\n",
+    "print(virginica.head())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22a37fb8-47fb-4c1c-a1b1-6d6d95e945a7",
+   "id": "a1e7969d-f10d-4f8d-a0b6-c5bea4d7dc70",
    "metadata": {},
    "outputs": [],
    "source": []
